--- a/conferences/WAF_2016/Seguridad/waf2016.tex
+++ b/conferences/WAF_2016/Seguridad/waf2016.tex
@@ -108,14 +108,21 @@ The paper is organized as follows: Next section describes the testbed we have de
  
 We prepared the following scenario to test the implementation of our approach.
 
-\textcolor{red}{TRADUCIR:} Un robot con un PC corriendo el master. Un sensor láser conectado al PC del robot. Un nodo de cifrado corriendo en el robot, que cifra los mensajes del láser y los publica en el topic "laser/encryted" (por ejemplo).
-Por otro lado, hay un PC cliente con ROS, que se registra en el master. Se suscribe al topic "laser/encryted" y como conoce la clave, es capaz de descifrar la información proporcionada por el láser.
+%\textcolor{red}{TRADUCIR:} Un robot con un PC corriendo el master. Un sensor láser conectado al PC del robot. Un nodo de cifrado corriendo en el robot, que cifra los mensajes del láser y los publica en el topic "laser/encryted" (por ejemplo).
+%Por otro lado, hay un PC cliente con ROS, que se registra en el master. Se suscribe al topic "laser/encryted" y como conoce la clave, es capaz de descifrar la información proporcionada por el láser.
 
-Al mismo tiempo, un atacante desde otro PC con ROS, intenta hacer lo mismo. Escanea la red hasta dar con la IP del master y se registra. Pero gracias a nuestra solución, aunque se suscriba al topic para obtener los datos del láse, no es capaz de ver nada legible porque no conoce la clave de descifrado.
+First, we set up our robot RB1 installing ROS Indigo in its embedded computer. The master component was running in this platform. The robot was connected by cable to the network of our laboratory. We plugged a Hokuyo laser sensor to the robot. We launched the Hokuyo node that publishes laser data to the topic \textit{/laser}. Next we executed our encryption node which subscribes to \textit{/laser}, performs data encryption and publishes them into \textit{/encrypted/laser} topic.
 
-\textcolor{red}{DUDA:} C\'omo estamos transmitiendo la clave la primera vez? ¿La tienen cableada el Master y el Client?
+Second, we used one desktop computer as a ``known client'', also with ROS Indigo installed and connected by cable to our network. This client knows the master ROS IP, so it can communicate with master. We run a decryption node in the client computer, which registers to master and subscribes to the topic \textit{/encrypted/laser}. This node decrypts data and prints them on the screen.
 
-Figure~\ref{fig:TestBed} provides a graphical representation of the scenario created. In this case, two clients are connected to a topic. This situation is transparent to ROS Master.
+Third, we used another desktop computer as a simulated ``attacker'', connected to the same  cable network. This computer has the same ROS version running on it. The attacker doesn't know the master ROS IP, but he can easily discover it performing a network scan with known tools like \textit{nmap}. Then the attacker can execute a malicious node for attempting to read laser data, which is being published in the topic \textit{/encrypted/laser}. Despite the node could subscribe to that topic, all data received is encrypted. As a result, the malicious node can't see original laser messages because the attacker doesn't have the key to decrypt them. 
+
+%Al mismo tiempo, un atacante desde otro PC con ROS, intenta hacer lo mismo. Escanea la red hasta dar con la IP del master y se registra. Pero gracias a nuestra soluci\'on, aunque se suscriba al topic para obtener los datos del l\'aser, no es capaz de ver nada legible porque no conoce la clave de descifrado.
+
+\textcolor{red}{TRADUCIR:} Para las pruebas, la clave para cifrar/descifrar la tienen guardada tanto el master como el cliente conocido. En un sistema real, este proceso debería hacerse mediante un sistema de clave pública-privada como RSA, para transmitir de una forma segura la clave que van a compartir ambos nodos.
+
+Figure~\ref{fig:TestBed} provides a graphical representation of the scenario created.
+%In this case, two clients are connected to a topic. This situation is transparent to ROS Master.
 %The standard process starts with a basic sensor node (BSN). We have defined as BSN those ROS nodes in charge of to publish the information from the sensor.
 %We have prepared a testbed with two laptopts.
 
@@ -128,14 +135,15 @@ Figure~\ref{fig:TestBed} provides a graphical representation of the scenario cre
 \end{figure}
 
 
-We have installed ROS Indigo in two computers connected through a wired Ethernet 10/100 switch (model XXXX). In the first computer we have connected an Asus Xtion camera and a Hokuyo laser sensor. In the second computer have run a node visualizing the information from the sensors. %Figure \ref{fig:maqueta} shows this environment.
-
+%We have installed ROS Indigo in two computers connected through a wired Ethernet 10/100 switch (model XXXX).
+%In the first computer we connected an Asus Xtion camera and a Hokuyo laser sensor. The second computer was running a node for visualizing the sensors information sent by first computer. %Figure \ref{fig:maqueta} shows this environment.
 
 % Then we modified the standard ROS implementation. We changed the TCP/IP sockets based implementation by ciphered ones.
 
+
 \subsection{Encrypting ROS messages}
 
-%%%  SISTEMA DE CIFRADO QUE USAMOS
+%%%  DESCRIBIR SISTEMA DE CIFRADO QUE USAMOS
 
 % Decir que: SÓLO HEMOS AÑADIDO CIFRADO Y DESCIFRADO EN LOS NODOS EMISORES Y RECEPTORES. NO HEMOS MODIFICADO EL SISTEMA DE BAJO NIVEL DE ROS, PARA EVALUAR ESPECÍFICAMENTE Y DE UNA FORMA MÁS PRECISA LA CARGA QUE SUPONE EL CIFRADO EN LOS NODOS.
 
@@ -166,6 +174,8 @@ In the second experiment we changed the first computer for a RB1 robot and the X
 
 
 \section{Experimental Measurements}
+
+\textcolor{red}{A\~NADIR EL MODELO DE SWITCH EN ESTA SECCI\'ON}
 
 To illustrate the described approach, we present an ad-hoc implementation of an encryption system to change part of the message used for transmit or receive robot sensors information. 
 We maintain in each case 
@@ -200,11 +210,9 @@ def fn_timer(function):
 
 \subsection{Text Messages}
 
-% \subsubsection{Text Messages}
-
 In this test we have used a modified version of talker/listener tutorial proposed by ROS. 
-ROS statistical data shows the simple publish/subscribe example sending 11 string messages ({\em std\_msgs/String}) by second of ``Hello wold'' plus a timestamp with 440 bytes of traffic.
-In this manner, we want to analyse the behaviour of the system using bigger messages: T1, 262144 bytes (256 KB); T2, 524288 bytes (512 KB); and T3, 1048576 bytes (1024 KB).
+ROS statistical data shows the simple publish/subscribe example sending 11 string messages ({\em std\_msgs/String}) per second (with ``Hello wold'' text), plus a timestamp with 440 bytes of traffic.
+In this manner, we wanted to analyse the behaviour of the system using bigger messages: T1, 262144 bytes (256 KB); T2, 524288 bytes (512 KB); and T3, 1048576 bytes (1024 KB).
 
 The measurements of behaviour of ROS traffic presents with simple plain messages {\em delivered\_msgs} 10 of T1 generate . When T2 messages are sent the system runs with 4194368 bytes of traffic and finally when it is working in  T3 messages just send 4194336 bytes and a total of 4 messages. There is no dropped messages by subscription.
 
@@ -306,7 +314,7 @@ We have used a Logitech, Inc. QuickCam Pro 9000 webcam.
 
 There are three nodes involved in our system: usb\_cam, encrypted\_node and decrypted\_node. The first and the sencond run in the master computer, the decrypted one in a separate computer.
 
-There are three topics involved: 
+There are three topics involved: \textcolor{red}{[COMPLETAR]}
 
 To analyse the behaviour of the system under encrypt/decrypt circumstances we use an Intel i7 computer with 16 GB RAM. The ROS master system has 234 process running by default in a Ubuntu 14.04, the client is running 242 process in the same operative system.
 
